tests/negative/neg_string_equality.safe
-- Test: neg_string_equality
-- Description: String equality/comparison remains outside PR11.2.
-- Expected: REJECT unsupported_source_construct

package neg_string_equality

   function same (left : in string; right : in string) returns boolean

      return left == right;

